--- a/Views/Shared/_PartialProductVariantInfo.cshtml
+++ b/Views/Shared/_PartialProductVariantInfo.cshtml
@@ -1,6 +1,6 @@
 ﻿@model BirileriWebSitesi.Models.ViewModels.ProductDetailedVariantInfoViewModel
 
-    <h4 id="variant-name">@Model.VariantName</h4>
+    <h4 id="variant-name" class="content">@Model.VariantName</h4>
     <input type="hidden" id="variant-code" value="@Model.VariantCode"/>
     <input type="hidden" id="quantity" value="@Model.Quantity" />
     <div class="rating">
