product detailed swiper bug fixed

--- a/Views/Shared/_PartialProductVariantImage.cshtml
+++ b/Views/Shared/_PartialProductVariantImage.cshtml
@@ -1,17 +1,15 @@
 ﻿@model BirileriWebSitesi.Models.ViewModels.ProductDetailedVariantImageViewModel
 <div class="swiper swiper-single-product" >
-    <div class="swiper-wrapper">
+    <div class="swiper-wrapper m-0 p-0">
         @foreach (var imagePath in Model.FilePaths)
         {
-           @*  <div class="swiper-slide ">
+            <div class="swiper-slide">
                 <a href="@imagePath" class="lightbox-image" title="@Model.ProductVariantName">
-                    <img src="@Url.Content(imagePath)" style="height:auto;max-width: 100%;max-height: 400px;" loading="lazy" alt="@Model.ProductVariantName" />
+                    <img src="@Url.Content(imagePath)" class="product-image" style="height:auto;width:100%;object-fit:cover;" loading="lazy" alt="@Model.ProductVariantName" />
                 </a>
                 <input type="hidden" id="variant-name" value="@Model.ProductVariantName" />
-            </div> *@
-            <div class="swiper-slide text-center">
-                <img src="@Url.Content(imagePath)" style="height:auto;max-width:100%;max-height: 400px;" loading="lazy" alt="@Model.ProductVariantName" />
             </div>
+
         }
        
     </div>
