--- a/Views/Shared/_PartialProductVariantInfo.cshtml
+++ b/Views/Shared/_PartialProductVariantInfo.cshtml
@@ -4,10 +4,10 @@
     <input type="hidden" id="variant-code" value="@Model.VariantCode"/>
     <input type="hidden" id="quantity" value="@Model.Quantity" />
     <div class="rating">
-        <span class="fa fa-star"></span>
-        <span class="fa fa-star"></span>
-        <span class="fa fa-star"></span>
-        <span class="fa fa-star"></span>
-        <span class="fa fa-star"></span>
+        <span style="color:#FFB22F;" class="fa fa-star"></span>
+        <span style="color:#FFB22F;" class="fa fa-star"></span>
+        <span style="color:#FFB22F;" class="fa fa-star"></span>
+        <span style="color:#FFB22F;" class="fa fa-star"></span>
+        <span style="color:#FFB22F;" class="fa fa-star"></span>
     </div>
 <div class="item-price"><span id="variant-price">@Model.VariantPrice</span> ₺</div>
