--- a/Views/Shared/_PartialRelatedProductsWidget.cshtml
+++ b/Views/Shared/_PartialRelatedProductsWidget.cshtml
@@ -27,9 +27,9 @@
                         </a>
                     </h4>
                     <div class="rating">
-                        <span class="fa fa-star"></span><span class="fa fa-star"></span>
-                        <span class="fa fa-star"></span><span class="fa fa-star"></span>
-                        <span class="fa fa-star"></span>
+                        <span style="color:#ffb22f" class="fa fa-star"></span><span style="color:#ffb22f" class="fa fa-star"></span>
+                        <span style="color:#ffb22f" class="fa fa-star"></span><span style="color:#ffb22f" class="fa fa-star"></span>
+                        <span style="color:#ffb22f" class="fa fa-star"></span>
                     </div>
                     <div class="price">@item.BasePrice ₺</div>
                 </div>
